--- a/index.html
+++ b/index.html
@@ -17,35 +17,35 @@
       var assert = chai.assert;
     </script>
 
-    <script src="greet.js" charset="utf-8"></script>
-    <script src="isFromBellville.js" charset="utf-8"></script>
-    <script src="regCheck.js" charset="utf-8"></script>
-    <script src="countRegNumber.js" charset="utf-8"></script>
-    <script src="isWeekday.js" charset="utf-8"></script>
-    <script src="yearsAgo.js" charset="utf-8"></script>
-    <script src="countAllPaarl.js" charset="utf-8"></script>
-    <script src="countAllFromTown.js" charset="utf-8"></script>
-    <script src="transportFee.js" charset="utf-8"></script>
-    <script src="totalPhoneBill.js" charset="utf-8"></script>
-    <script src="fromWhere.js" charset="utf-8"></script>
-    <script src="findItemsOver20.js" charset="utf-8"></script>
-    <script src="findItemsOver.js" charset="utf-8"></script>
-    <script src="mostProfitableDepartment.js" charset="utf-8"></script>
+    <script src="test/greet.js" charset="utf-8"></script>
+    <script src="test/isFromBellville.js" charset="utf-8"></script>
+    <script src="test/regCheck.js" charset="utf-8"></script>
+    <script src="test/countRegNumber.js" charset="utf-8"></script>
+    <script src="test/isWeekday.js" charset="utf-8"></script>
+    <script src="test/yearsAgo.js" charset="utf-8"></script>
+    <script src="test/countAllPaarl.js" charset="utf-8"></script>
+    <script src="test/countAllFromTown.js" charset="utf-8"></script>
+    <script src="test/transportFee.js" charset="utf-8"></script>
+    <script src="test/totalPhoneBill.js" charset="utf-8"></script>
+    <script src="test/fromWhere.js" charset="utf-8"></script>
+    <script src="test/findItemsOver20.js" charset="utf-8"></script>
+    <script src="test/findItemsOver.js" charset="utf-8"></script>
+    <script src="test/mostProfitableDepartment.js" charset="utf-8"></script>
 
-    <script src="greet.tests.js" charset="utf-8"></script>
-    <script src="isFromBellville.test.js" charset="utf-8"></script>
-    <script src="regCheck.test.js" charset="utf-8"></script>
-    <script src="countRegNumber.test.js" charset="utf-8"></script>
-    <script src="isWeekday.test.js" charset="utf-8"></script>
-    <script src="yearsAgo.test.js" charset="utf-8"></script>
-    <script src="countAllPaarl.test.js" charset="utf-8"></script>
-    <script src="countAllFromTown.test.js" charset="utf-8"></script>
-    <script src="transportFee.test.js" charset="utf-8"></script>
-    <script src="totalPhoneBill.test.js" charset="utf-8"></script>
-    <script src="fromWhere.test.js" charset="utf-8"></script>
-    <script src="findItemsOver20.test.js" charset="utf-8"></script>
-    <script src="findItemsOver.test.js" charset="utf-8"></script>
-    <script src="mostProfitableDepartment.test.js" charset="utf-8"></script>
+    <script src="test/greet.tests.js" charset="utf-8"></script>
+    <script src="test/isFromBellville.test.js" charset="utf-8"></script>
+    <script src="test/regCheck.test.js" charset="utf-8"></script>
+    <script src="test/countRegNumber.test.js" charset="utf-8"></script>
+    <script src="test/isWeekday.test.js" charset="utf-8"></script>
+    <script src="test/yearsAgo.test.js" charset="utf-8"></script>
+    <script src="test/countAllPaarl.test.js" charset="utf-8"></script>
+    <script src="test/countAllFromTown.test.js" charset="utf-8"></script>
+    <script src="test/transportFee.test.js" charset="utf-8"></script>
+    <script src="test/totalPhoneBill.test.js" charset="utf-8"></script>
+    <script src="test/fromWhere.test.js" charset="utf-8"></script>
+    <script src="test/findItemsOver20.test.js" charset="utf-8"></script>
+    <script src="test/findItemsOver.test.js" charset="utf-8"></script>
+    <script src="test/mostProfitableDepartment.test.js" charset="utf-8"></script>
 
     <script>
       mocha.checkLeaks();
