added more tests

--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
     <script src="test/regCheck.js" charset="utf-8"></script>
     <script src="test/countRegNumber.js" charset="utf-8"></script>
     <script src="test/isWeekday.js" charset="utf-8"></script>
-    
-    <!-- OTHER BOOTCAMP JS CODE
     <script src="test/yearsAgo.js" charset="utf-8"></script>
     <script src="test/countAllPaarl.js" charset="utf-8"></script>
     <script src="test/countAllFromTown.js" charset="utf-8"></script>
     <script src="test/transportFee.js" charset="utf-8"></script>
+
+    <!-- OTHER BOOTCAMP JS CODE
     <script src="test/totalPhoneBill.js" charset="utf-8"></script>
     <script src="test/fromWhere.js" charset="utf-8"></script>
     <script src="test/findItemsOver20.js" charset="utf-8"></script>
@@ -40,12 +40,13 @@
     <script src="test/regCheck.test.js" charset="utf-8"></script>
     <script src="test/countRegNumber.test.js" charset="utf-8"></script>
     <script src="test/isWeekday.test.js" charset="utf-8"></script>
-    
-    <!-- OTHER BOOTCAMP TESTS 
     <script src="test/yearsAgo.test.js" charset="utf-8"></script>
     <script src="test/countAllPaarl.test.js" charset="utf-8"></script>
     <script src="test/countAllFromTown.test.js" charset="utf-8"></script>
     <script src="test/transportFee.test.js" charset="utf-8"></script>
+
+
+    <!--TESTING CODE 
     <script src="test/totalPhoneBill.test.js" charset="utf-8"></script>
     <script src="test/fromWhere.test.js" charset="utf-8"></script>
     <script src="test/findItemsOver20.test.js" charset="utf-8"></script>
