added unit tests

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
       var assert = chai.assert;
     </script>
 
+    <!-- OTHER BOOTCAMP JS CODE -->
+
     <script src="test/greet.js" charset="utf-8"></script>
     <script src="test/isFromBellville.js" charset="utf-8"></script>
     <script src="test/regCheck.js" charset="utf-8"></script>
@@ -26,14 +28,13 @@
     <script src="test/countAllPaarl.js" charset="utf-8"></script>
     <script src="test/countAllFromTown.js" charset="utf-8"></script>
     <script src="test/transportFee.js" charset="utf-8"></script>
-
-    <!-- OTHER BOOTCAMP JS CODE
     <script src="test/totalPhoneBill.js" charset="utf-8"></script>
     <script src="test/fromWhere.js" charset="utf-8"></script>
     <script src="test/findItemsOver20.js" charset="utf-8"></script>
     <script src="test/findItemsOver.js" charset="utf-8"></script>
     <script src="test/mostProfitableDepartment.js" charset="utf-8"></script>
-    -->
+
+    <!--TESTING CODE -->
 
     <script src="test/greet.tests.js" charset="utf-8"></script>
     <script src="test/isFromBellville.test.js" charset="utf-8"></script>
@@ -44,15 +45,11 @@
     <script src="test/countAllPaarl.test.js" charset="utf-8"></script>
     <script src="test/countAllFromTown.test.js" charset="utf-8"></script>
     <script src="test/transportFee.test.js" charset="utf-8"></script>
-
-
-    <!--TESTING CODE 
     <script src="test/totalPhoneBill.test.js" charset="utf-8"></script>
     <script src="test/fromWhere.test.js" charset="utf-8"></script>
     <script src="test/findItemsOver20.test.js" charset="utf-8"></script>
     <script src="test/findItemsOver.test.js" charset="utf-8"></script>
     <script src="test/mostProfitableDepartment.test.js" charset="utf-8"></script>
-    -->
     
     <script>
       mocha.checkLeaks();
